==> Miracle0213/test/BSP/bsp_cpu_flash.c <==
/**
 * Copyright (C) STW Electronics Co. Ltd. 2021-2026 All rights reserved.
 *
 * @file      bsp_cpu_flash.c
 * @brief     none
 * @version   1.0.0
 * @author    Wei-JiaBao
 * @date      2021/11/22
 */

#include "bsp.h"
#include <string.h>


#define CPU_FLASH_BASE_ADDR (uint32_t)(FLASH_BASE) /* 0x08000000 */
#define CPU_FLASH_END_ADDR (uint32_t)(0x08001FFF)

/*
*********************************************************************************************************
*	函 数 名: bsp_GetSector
*	功能说明: 根据地址计算扇区首地址
*	形    参: 无
*	返 回 值: 扇区号（0-7)
*********************************************************************************************************
*/
uint32_t bsp_GetSector(uint32_t Address)
{
    return (Address - CPU_FLASH_BASE_ADDR) / FLASH_PAGE_SIZE;
}

/*
*********************************************************************************************************
*	函 数 名: bsp_ReadCpuFlash
*	功能说明: 读取CPU Flash的内容
*	形    参:  _ucpDst : 目标缓冲区
*			 _ulFlashAddr : 起始地址
*			 _ulSize : 数据大小（单位是字节）
*	返 回 值: 0=成功，1=失败
*********************************************************************************************************
*/
uint8_t bsp_ReadCpuFlash(uint8_t *_ucpDst, uint32_t _ulFlashAddr, uint32_t _ulSize)
{
    uint32_t i;

    if (_ulFlashAddr + _ulSize > CPU_FLASH_BASE_ADDR + CPU_FLASH_SIZE)
    {
        return 1;
    }

    /* 长度为0时不继续操作,否则起始地址为奇地址会出错 */
    if (_ulSize == 0)
    {
        return 1;
    }

    for (i = 0; i < _ulSize; i++)
    {
        *_ucpDst++ = *(uint8_t *) _ulFlashAddr++;
    }

    return 0;
}

/*
*********************************************************************************************************
*	函 数 名: bsp_CmpCpuFlash
*	功能说明: 比较Flash指定地址的数据.
*	形    参: _ulFlashAddr : Flash地址
*			 _ucpBuf : 数据缓冲区
*			 _ulSize : 数据大小（单位是字节）
*	返 回 值:
*			FLASH_IS_EQU		0   Flash内容和待写入的数据相等，不需要擦除和写操作
*			FLASH_REQ_WRITE		1	Flash不需要擦除，直接写
*			FLASH_REQ_ERASE		2	Flash需要先擦除,再写
*			FLASH_PARAM_ERR		3	函数参数错误
*********************************************************************************************************
*/
uint8_t bsp_CmpCpuFlash(uint32_t _ulFlashAddr, uint8_t *_ucpBuf, uint32_t _ulSize)
{
    uint32_t i;
    uint8_t ucIsEqu; /* 相等标志 */
    uint8_t ucByte;

    /* 如果偏移地址超过芯片容量，则不改写输出缓冲区 */
    if (_ulFlashAddr + _ulSize > CPU_FLASH_BASE_ADDR + CPU_FLASH_SIZE)
    {
        return FLASH_PARAM_ERR; /*　函数参数错误　*/
    }

    /* 长度为0时返回正确 */
    if (_ulSize == 0)
    {
        return FLASH_IS_EQU; /* Flash内容和待写入的数据相等 */
    }

    ucIsEqu = 1; /* 先假设所有字节和待写入的数据相等，如果遇到任何一个不相等，则设置为 0 */
    for (i = 0; i < _ulSize; i++)
    {
        ucByte = *(uint8_t *) _ulFlashAddr;

        if (ucByte != *_ucpBuf)
        {
            if (ucByte != 0xFF)
            {
                return FLASH_REQ_ERASE; /* 需要擦除后再写 */
            }
            else
            {
                ucIsEqu = 0; /* 不相等，需要写 */
            }
        }

        _ulFlashAddr++;
        _ucpBuf++;
    }

    if (ucIsEqu == 1)
    {
        return FLASH_IS_EQU; /* Flash内容和待写入的数据相等，不需要擦除和写操作 */
    }
    else
    {
        return FLASH_REQ_WRITE; /* Flash不需要擦除，直接写 */
    }
}

/*
*********************************************************************************************************
*	函 数 名: bsp_EraseCpuFlash
*	功能说明: 擦除CPU FLASH一个扇区 （128KB)
*	形    参: _ulFlashAddr : Flash地址
*	返 回 值: 0 成功， 1 失败
*			  HAL_OK       = 0x00,
*			  HAL_ERROR    = 0x01,
*			  HAL_BUSY     = 0x02,
*			  HAL_TIMEOUT  = 0x03
*
*********************************************************************************************************
*/
uint8_t bsp_EraseCpuFlash(uint32_t _ulFlashAddr)
{
    uint32_t FirstSector = 0, NbOfSectors = 0;
    FLASH_EraseInitTypeDef EraseInitStruct;
    uint32_t SECTORError = 0;
    uint8_t re;

    /* Unlock the Flash to enable the flash control register access *************/
    __HAL_FLASH_CLEAR_FLAG(FLASH_FLAG_EOP | FLASH_FLAG_WRPERR | FLASH_FLAG_PROGERR | FLASH_FLAG_PGAERR | FLASH_FLAG_PGSERR);

    HAL_FLASH_Unlock();

    /* Get the 1st sector to erase */
    FirstSector = bsp_GetSector(_ulFlashAddr);
    /* Get the number of sector to erase from 1st sector*/
    NbOfSectors = 1; /* 固定1个扇区 */

    /* Fill EraseInit structure*/
    EraseInitStruct.TypeErase = FLASH_TYPEERASE_PAGES;
    EraseInitStruct.Page = FirstSector;
    EraseInitStruct.NbPages = NbOfSectors;

    /*
		!= HAL_OK :
			Error occurred while sector erase.
			User can add here some code to deal with this error.
			SECTORError will contain the faulty sector and then to know the code error on this sector,
			user can call function 'HAL_FLASH_GetError()'
	*/
    re = HAL_FLASHEx_Erase(&EraseInitStruct, &SECTORError);

    /* Lock the Flash to disable the flash control register access (recommended
			to protect the FLASH memory against possible unwanted operation) *********/
    HAL_FLASH_Lock();
    return re;
}

/*
*********************************************************************************************************
*	函 数 名: bsp_WriteCpuFlash
*	功能说明: 写数据到CPU 内部Flash。 必须按8字节(双字)整数倍写。不支持跨扇区。扇区大小2KB.
*			  写之前需要擦除扇区. 长度不是8字节整数倍时，最后几个字节末尾补0写入.
*	形    参: _ulFlashAddr : Flash地址
*			 _ucpSrc : 数据缓冲区
*			 _ulSize : 数据大小（单位是字节, 必须是32字节整数倍）
*	返 回 值: 0-成功，1-数据长度或地址溢出，2-写Flash出错(估计Flash寿命到)
*********************************************************************************************************
*/
uint8_t bsp_WriteCpuFlash(uint8_t *_ucpSrc, uint32_t _ulFlashAddr, uint32_t _ulSize)
{
    uint32_t i;
    uint8_t ucRet;

    /* 如果偏移地址超过芯片容量，则不改写输出缓冲区 */
    if (_ulFlashAddr + _ulSize > CPU_FLASH_BASE_ADDR + CPU_FLASH_SIZE)
    {
        return 1;
    }

    /* 长度为0时不继续操作  */
    if (_ulSize == 0)
    {
        return 0;
    }

    ucRet = bsp_CmpCpuFlash(_ulFlashAddr, _ucpSrc, _ulSize);

    if (ucRet == FLASH_IS_EQU)
    {
        return 0;
    }

    __set_PRIMASK(1); /* 关中断 */

    if (ucRet == FLASH_REQ_ERASE)
    {
        bsp_EraseCpuFlash(_ulFlashAddr);
    }

    /* FLASH 解锁 */
    HAL_FLASH_Unlock();

    for (i = 0; i < _ulSize / 8; i++) /* 未处理非8字节整数倍个数情况 */
    {
        uint64_t FlashWord = 0;

        memcpy((char *) &FlashWord, _ucpSrc, 8);

        _ucpSrc += 8;

        if (HAL_FLASH_Program(FLASH_TYPEPROGRAM_DOUBLEWORD, _ulFlashAddr, FlashWord) == HAL_OK)
        {
            _ulFlashAddr = _ulFlashAddr + 8; /* increment for the next Flash word*/
        }
        else
        {
            goto err;
        }
    }

    /* 2021-11-22 长度不是8字节整数倍 */
    if (_ulSize % 8)
    {
        uint64_t FlashWord = 0;

        memcpy((char *) &FlashWord, _ucpSrc, _ulSize % 8);

        if (FLASH_WaitForLastOperation(1000) != HAL_OK)
        {
            goto err;
        }

        if (HAL_FLASH_Program(FLASH_TYPEPROGRAM_DOUBLEWORD, _ulFlashAddr, FlashWord) == HAL_OK)
        {
            ;  // _ulFlashAddr = _ulFlashAddr + 8; /* increment for the next Flash word*/
        }
        else
        {
            goto err;
        }
    }

    /* Flash 加锁，禁止写Flash控制寄存器 */
    HAL_FLASH_Lock();

    __set_PRIMASK(0); /* 开中断 */

    return 0;

err:
    /* Flash 加锁，禁止写Flash控制寄存器 */
    HAL_FLASH_Lock();

    __set_PRIMASK(0); /* 开中断 */

    return 1;
}
